working search engine to update data when searched for city

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -59,8 +59,16 @@
   border-color: #684870;
 }
 
+.form-control {
+  margin: 5px;
+}
+
 #city {
   font-size: 35px;
+}
+
+#country {
+  font-size: 20px;
 }
 
 #date {
